daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N16_insufficient_q_threshold/h0.hex
d152ca8ef0584c65f74e05e02cd29ef59ee6fe7520fbbd73b2c2e642aae53df335c2fd41036a03b9091cf3be5b6468847e459d1296b0f2cd40e1d9d0d7304d2d
